--- a/arxiv/2023_05_arxiv.html
+++ b/arxiv/2023_05_arxiv.html
@@ -122,6 +122,43 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.06389">https://arxiv.org/abs/2305.06389</a></span> Phase diagram of the three-dimensional subsystem toric code ***</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.07028">https://arxiv.org/abs/2305.07028</a></span> 2D Hamiltonians with exotic bipartite and topological entanglement ***** (Ethan Lake, Soonwon Choi)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.07012">https://arxiv.org/abs/2305.07012</a></span> Flux fractionalization transition in two-dimensional dimer-loop models (Kedar Damle)</p>
+<br>
+<p class="p1">20230515</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.07063">https://arxiv.org/abs/2305.07063</a></span> Gaining insights on anyon condensation and 1-form symmetry breaking across a topological phase transition in a deformed toric code model *** (Joe Huxford, Dung Xuan Nguyen, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.07112">https://arxiv.org/abs/2305.07112</a></span> Detecting Fractionalization in Critical Spin Liquids using Color Centers ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.07051">https://arxiv.org/abs/2305.07051</a></span> Nodal semimetals in d ≥ 3 to sharp pseudo-Landau levels by dimensional reduction **** (Matthias Vojta)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.07326">https://arxiv.org/abs/2305.07326</a></span> A perspective on Lindblad’s Non-Equilibrium Entropy</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.00534">https://arxiv.org/abs/2207.00534</a></span> An Introduction to Thermal Field Theory and Some of its Application *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.01722">https://arxiv.org/abs/2305.01722</a></span> Beginners lectures on flux compactifications and related Swampland topics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.07619">https://arxiv.org/abs/2305.07619</a></span> Light-induced insulator-metal transition in Sr2IrO4 reveals the nature of the insulating ground state (Nuh Gedik)</p>
+<p class="p2"><br></p>
+<p class="p1">20230516</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.08171">https://arxiv.org/abs/2305.08171</a></span> Topological heavy fermions in magnetic field *** (B. Andrei Bernevig, Oskar Vafek)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.08584">https://arxiv.org/abs/2305.08584</a></span> Topological Phase Transitions of Generalized Brillouin Zone (Moon Jip Park)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.07718">https://arxiv.org/abs/2305.07718</a></span> Dirac quantum criticality and the web of dualities ***** (William Witczak-Krempa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.07694">https://arxiv.org/abs/2305.07694</a></span> Quasiuniversality from all-in-all-out Weyl quantum criticality in pyrochlore iridates (Lukas Janssen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.07700">https://arxiv.org/abs/2305.07700</a></span> Charting the space of ground states with tensor networks (Michael Hermele)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.06966">https://arxiv.org/abs/2112.06966</a></span> A stability bound on the T-linear resistivity of conventional metals (Ilya Esterlis, Steven A. Kivelson)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.08263">https://arxiv.org/abs/2305.08263</a></span> On one-loop corrected dilaton action in string theory *** (Manki Kim)</p>
+<p class="p2"><br></p>
+<p class="p1">20230517</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.08904">https://arxiv.org/abs/2305.08904</a></span> Colloquium: Quantum and Classical Discrete Time Crystals ***** (Michael P. Zaletel, Mikhail Lukin, Christopher Monroe, Chetan Nayak, Frank Wilczek, Norman Y. Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.08897">https://arxiv.org/abs/2305.08897</a></span> Analog gravity and the continuum effective theory of the graphene tight binding lattice model ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.09444">https://arxiv.org/abs/2305.09444</a></span> Absence of inhomogeneous chiral phases in (2 + 1)-dimensional four-fermion and Yukawa models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.09103">https://arxiv.org/abs/2305.09103</a></span> Symbolic determinant construction of perturbative expansions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.09197">https://arxiv.org/abs/2305.09197</a></span> Mixed-State Quantum Spin Liquid in Kitaev Lindbladian: Dynamical Anyon Condensation *** (Kyusung Hwang)</p>
+<p class="p2"><br></p>
+<p class="p1">20230518</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.09767">https://arxiv.org/abs/2305.09767</a></span> On out-of-equilibrium phenomena in pseudogap phase of complex SYK+U model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.09757">https://arxiv.org/abs/2305.09757</a></span> Robust Hamiltonian Engineering for Interacting Qudit Systems (Mikhail D. Lukin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.10183">https://arxiv.org/abs/2305.10183</a></span> Effect of Coriolis Force on Electrical Conductivity: A Non-Relativistic Description</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.09713">https://arxiv.org/abs/2305.09713</a></span> Comments on Boundaries, Anomalies, and Non-Invertible Symmetries ***** (Yichul Choi, Brandon C. Rayhaun, Yaman Sanghavi, Shu-Heng Shao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.10363">https://arxiv.org/abs/2305.10363</a></span> Resilient Infinite Randomness Criticality for a Disordered Chain of Interacting Majorana Fermions</p>
+<p class="p2"><br></p>
+<p class="p1">20230519</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.10592">https://arxiv.org/abs/2305.10592</a></span> Measuring Non-local Brane Order with Error-corrected Parity Snapshots (Wonjun Lee, Gil Young Cho, Jae-yoon Choi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.11113">https://arxiv.org/abs/2305.11113</a></span> Bosonization, Duality, and the C-Theorem in the Non-Abelian Thirring Model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.08263">https://arxiv.org/abs/2305.08263</a></span> On one-loop corrected dilaton action in string theory (Manki Kim)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
