--- a/index.html
+++ b/index.html
@@ -65,13 +65,17 @@
 
 My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"Fractonic Quantum Phases in Breathing Pyrochlore Lattice"</b><br>	<br>
 	ㅡㅛ am SangEun Han and a postdoctoral fellow in Yong Baek Kim's Quantum Condensed Matter Theory group in University of Toronto. My research theme is  understanding strongly correlated systems, in particular, by using quantum field theory.<br><br>-->
+<!-- NEWS -->
 	<div class="cvitemize"> <a href="#publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Recent News</a> </div>
 	<ul><li>Now I am looking for next position starting in (maybe) September 2023. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.</li>
-		<li><b>[Mar. 2023]</b> I will give a <a href="#contributed" style="text-decoration:none;color:var(--font-color)">contributed talk</a> <a href="https://meetings.aps.org/Meeting/MAR23/Session/M30.4" style="font-style: italic;">"Microscopic theory of multi-stage Fermi surface reconstruction in higher-rank moment quantum materials" (2023/03/08 08:36 AM, Room 222/223)</a> at APS march meeting 2023, Las Vegas, Nevada, USA! <div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><img src="img/march2023_ads.png" width="100%" alt="Summary of Talk"></details></div>And <a href="https://meetings.aps.org/Meeting/MAR23/Session/S29.2">my another work <span style="font-style: italic;">"Non-Fermi liquid behavior and quantum criticality in cubic heavy fermion systems with non-Kramers multipolar local moments"</span> will be presented by Daniel, at 2023/03/09 8:12 AM, Room 221.</a>
-	</li><li>
-		<b>[Feb. 2023]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2302.07883" style="font-style: italic;">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid (arXiv:2302.07883)"</a> has been posted on arXiv!
+<!--	-->
+		<li><b>[May 2023]</b> I will give a talk "<a href="https://www.sfu.ca/physics/news-events/events/2023/may/event6.html" style="font-style: italic;">Theory of a quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction</a>, at <span style="font-style: italic;">Condensed Matter Seminar, Simon Fraser University, Burnaby, British Columbia, Canada</span>.
+			</li>
+			<li><b>[Mar. 2023]</b> I will give a <a href="#contributed" style="text-decoration:none;color:var(--font-color)">contributed talk</a> <a href="https://meetings.aps.org/Meeting/MAR23/Session/M30.4" style="font-style: italic;">"Microscopic theory of multi-stage Fermi surface reconstruction in higher-rank moment quantum materials" (2023/03/08 08:36 AM, Room 222/223)</a> at APS march meeting 2023, Las Vegas, Nevada, USA! <div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><img src="img/march2023_ads.png" width="100%" alt="Summary of Talk"></details></div>And <a href="https://meetings.aps.org/Meeting/MAR23/Session/S29.2">my another work <span style="font-style: italic;">"Non-Fermi liquid behavior and quantum criticality in cubic heavy fermion systems with non-Kramers multipolar local moments"</span> will be presented by Daniel, at 2023/03/09 8:12 AM, Room 221.</a>
+	</li>
+	<li><b>[Feb. 2023]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2302.07883" style="font-style: italic;">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid (arXiv:2302.07883)"</a> has been posted on arXiv!
 	</li></ul>
-<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="20230216_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2023/02/16)</a>
+<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="20230521_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2023/05/21)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
@@ -93,15 +97,15 @@ Articles related to my works:
 	<div>
 	<div class="cvitemize"> <a id="publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Publication</a> </div>
 		<ul><li><div class="paper_title" style="display: flex;">
-		<span class="cvitem"><a href="https://arxiv.org/abs/2302.07883/" style="text-decoration:none;color:var(--font-color)"><div class="bouncing-text" style="display: inline-block;">
+		<span class="cvitem"><a href="https://journals.aps.org/prb/accepted/79077O3cQ351c244a5c280106df695b0c69aa0085" style="text-decoration:none;color:var(--font-color)"><div class="bouncing-text" style="display: inline-block;">
   <div class="sign3" style="display: inline-block;">W</div>
   <div class="sign1" style="display: inline-block;float: left;">N</div>
   <div class="sign2" style="display: inline-block;float: left;">E</div>
   <div class="shadow"></div></div>&nbsp"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid"</a>
 			</span>
 		<span class="cvperiod"></span></div>
-		<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b>*, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:var(--font-color)">Daniel J. Schultz</a>*, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color)">Yong Baek Kim</a><br>
-			<a href="https://arxiv.org/abs/2302.07883">arXiv:2302.07883</a><div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
+		<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b>, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:var(--font-color)">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color)">Yong Baek Kim</a><br>
+			<a href="https://journals.aps.org/prb/accepted/79077O3cQ351c244a5c280106df695b0c69aa0085" style="text-decoration:none;color:var(--font-color)">Accepted in PRB.</a> <a href="https://arxiv.org/abs/2302.07883">arXiv:2302.07883</a><div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
   <label>
     <input type="checkbox">
     <img style="float:right;border-radius: 3px;border: 1px solid transparent;border-color:black;background-color:#ffffff;" src="img/nonhermitian_Luttinger-Kondo.svg" alt="Phase diagram and RG flows of topological phase transition in line-nodal superconductor." width=30% >
