--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	<div class="cvitemize"> <a href="#publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Recent News</a> </div>
 	<ul><li>Now I am looking for next position starting in (maybe) September 2023. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.</li>
 <!--	-->
-		<li><b>[May 2023]</b> I will give a talk "<a href="https://www.sfu.ca/physics/news-events/events/2023/may/event6.html" style="font-style: italic;">Theory of a quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction</a>, at <span style="font-style: italic;">Condensed Matter Seminar, Simon Fraser University, Burnaby, British Columbia, Canada</span>.
+		<li><b>[May 2023]</b> I have given a talk "<a href="https://www.sfu.ca/physics/news-events/events/2023/may/event6.html" style="font-style: italic;">Theory of a quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction</a>, at <span style="font-style: italic;">Condensed Matter Seminar, Simon Fraser University, Burnaby, British Columbia, Canada</span>.
 			</li>
 			<li><b>[Mar. 2023]</b> I will give a <a href="#contributed" style="text-decoration:none;color:var(--font-color)">contributed talk</a> <a href="https://meetings.aps.org/Meeting/MAR23/Session/M30.4" style="font-style: italic;">"Microscopic theory of multi-stage Fermi surface reconstruction in higher-rank moment quantum materials" (2023/03/08 08:36 AM, Room 222/223)</a> at APS march meeting 2023, Las Vegas, Nevada, USA! <div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><img src="img/march2023_ads.png" width="100%" alt="Summary of Talk"></details></div>And <a href="https://meetings.aps.org/Meeting/MAR23/Session/S29.2">my another work <span style="font-style: italic;">"Non-Fermi liquid behavior and quantum criticality in cubic heavy fermion systems with non-Kramers multipolar local moments"</span> will be presented by Daniel, at 2023/03/09 8:12 AM, Room 221.</a>
 	</li>
 	<li><b>[Feb. 2023]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2302.07883" style="font-style: italic;">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid (arXiv:2302.07883)"</a> has been posted on arXiv!
 	</li></ul>
-<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="20230521_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2023/05/21)</a>
+<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="20230524_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2023/05/24)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
@@ -412,6 +412,26 @@ Theoretical Physics, Condensed matter physics, Strongly correlated systems, Quan
 	</div>
 	<div class="cvitemize"> <a id="invited" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Invited Talks</a> </div>
 	<ul><li><div>
+	<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
+  <div class="sign3" style="display: inline-block;">W</div>
+  <div class="sign1" style="display: inline-block;float: left;">N</div>
+  <div class="sign2" style="display: inline-block;float: left;">E</div>
+  <div class="shadow"></div></div> Condensed Matter Seminar at Simon Fraser University </span>
+	<span class="cvperiod">May 2023</span>
+	</div>
+	<div class="cvitemcontent"> <a href="https://www.sfu.ca/physics/news-events/events/2023/may/event6.html">"Theory of a quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a> </div>	
+
+	</li><li><div>
+	<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
+  <div class="sign3" style="display: inline-block;">W</div>
+  <div class="sign1" style="display: inline-block;float: left;">N</div>
+  <div class="sign2" style="display: inline-block;float: left;">E</div>
+  <div class="shadow"></div></div> Condensed Matter Seminar at University of Cincinnati (Zoom)</span>
+	<span class="cvperiod">May 2023</span>
+	</div>
+	<div class="cvitemcontent"> "Microscopic theory of multi-stage Fermi surface reconstruction in higher-rank moment quantum materials" </div>	
+
+	</li><li><div>
 	<span class="cvitem"> KAIST-Weizmann Workshop on Quantum Condensed Matter Physics </span>
 	<span class="cvperiod">December 2019</span>
 	</div>
