--- a/arxiv/2023_05_arxiv.html
+++ b/arxiv/2023_05_arxiv.html
@@ -194,6 +194,23 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.15448">https://arxiv.org/abs/2305.15448</a></span> A post-Gaussian approach to dipole symmetries and interacting fractons *****</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.15469">https://arxiv.org/abs/2305.15469</a></span> Kagome Materials I: SG 191, ScV6Sn6. Flat Phonon Soft Modes and Unconventional CDW Formation: Microscopic and Effective Theory (B. Andrei Bernevig)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.16062">https://arxiv.org/abs/2305.16062</a></span> A Simple Model of Pair Density Wave (A. M. Tsvelik)</p>
+<br>
+<p class="p1">20230529</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.16399">https://arxiv.org/abs/2305.16399</a></span> Topological Phases with Average Symmetries: the Decohered, the Disordered, and the Intrinsic ***** (Ruochen Ma, Jian-Hao Zhang, Zhen Bi, Meng Cheng, Chong Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.16496">https://arxiv.org/abs/2305.16496</a></span> Lieb-Schultz-Mattis Theorem in Open Quantum Systems ***** (Shinsei Ryu)</p>
+<p class="p2"><br></p>
+<p class="p1">20230530</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.17736">https://arxiv.org/abs/2305.17736</a></span> Short review of interaction effects in graphene</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.17264">https://arxiv.org/abs/2305.17264</a></span> SO(8) unification and the large-N theory of superconductor-insulator transition of two-dimensional Dirac fermions ***** (Igor F. Herbut, Subrata Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.18103">https://arxiv.org/abs/2305.18103</a></span> 50 years of quantum spin liquids ***** (Steven Kivelson, Shivaji Sondhi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.18296">https://arxiv.org/abs/2305.18296</a></span> ICTP Lectures on (Non-)Invertible Generalized Symmetries **</p>
+<p class="p2"><br></p>
+<p class="p1">20230531</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.18762">https://arxiv.org/abs/2305.18762</a></span> Non-Hermitian Haldane-Hubbard model: effective description of one and two-body dissipations</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.19189">https://arxiv.org/abs/2305.19189</a></span> Classification of Classical Spin Liquids: Detailed Formalism and Suite of Examples ***** (Han Yan, Owen Benton, Andriy H. Nevidomskyy, Roderich Moessner)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.18541">https://arxiv.org/abs/2305.18541</a></span> Many-body magic via Pauli-Markov chains - from criticality to gauge theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.19169">https://arxiv.org/abs/2305.19169</a></span> Exploring interacting chiral spin chains in terms of black hole physics *** (Jiannis K. Pachos)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.11432">https://arxiv.org/abs/2303.11432</a></span> Dynamics and Charge Fluctuations in Large-q Sachdev-Ye-Kitaev Lattices</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
