--- a/arxiv/2023_06_arxiv.html
+++ b/arxiv/2023_06_arxiv.html
@@ -91,6 +91,35 @@
 <p class="p3"><br></p>
 <p class="p1">20230609</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.04681">https://arxiv.org/abs/2306.04681</a></span> Conformal four-point correlators of the 3D Ising transition via the quantum fuzzy sphere *** (Yin-Chen He)</p>
+<br>
+<p class="p1">20230612</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.16153">https://arxiv.org/abs/2305.16153</a></span> Non-Hermitian Floquet Topological Matter – A Review</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.05678">https://arxiv.org/abs/2306.05678</a></span> Signature of Scramblon Effective Field Theory in Random Spin Models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.05465">https://arxiv.org/abs/2306.05465</a></span> Quantum criticality and entanglement for 2d long-range Heisenberg bilayer (Yang Qi, Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.06020">https://arxiv.org/abs/2306.06020</a></span> There’s Plenty of Room in the Middle: The Unsung Revolution of the Renormalization Group (Nigel Goldenfeld)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.05489">https://arxiv.org/abs/2306.05489</a></span> Crucial role of thermal fluctuations and vertex corrections for the magnetic pseudogap (Andrey V Chubukov)</p>
+<p class="p2"><br></p>
+<p class="p1">20230613</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.06158">https://arxiv.org/abs/2306.06158</a></span> Entanglement in BF theory I: Essential topological entanglement</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.07203">https://arxiv.org/abs/2306.07203</a></span> p-adic Holography from the Hyperbolic Fracton Model (Han Yan)</p>
+<p class="p2"><br></p>
+<p class="p1">20230614</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.07434">https://arxiv.org/abs/2306.07434</a></span> Frustrated multipoles in an icosahedral quasicrystal (Junmo Jeon, SungBin Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.07318">https://arxiv.org/abs/2306.07318</a></span> Monopoles, Scattering, and Generalized Symmetries (David Tong)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.05122">https://arxiv.org/abs/2302.05122</a></span> Anomalous Hall effect from a non-Hermitian viewpoint *** (Hiroki Isobe, Naoto Nagaosa)</p>
+<p class="p2"><br></p>
+<p class="p1">20230616</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.08595">https://arxiv.org/abs/2306.08595</a></span> TensorKrowch: Smooth integration of tensor networks in machine learning</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.08663">https://arxiv.org/abs/2306.08663</a></span> An effective gauge theory of fractons: perturbative and non-local aspects ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.08820">https://arxiv.org/abs/2306.08820</a></span> Ultrasonic investigation of valence fluctuations in the Kondo semimetal CeBi ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.08624">https://arxiv.org/abs/2306.08624</a></span> Multipolar spin liquid in an exactly solvable model for jeff = 3/2 moments ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.09143">https://arxiv.org/abs/2306.09143</a></span> Spontaneous dimerization, spin-nematic order, and deconfined quantum critical point in a spin-1 Kitaev chain with tunable single-ion anisotropy (Hae-Young Kee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.08347">https://arxiv.org/abs/2306.08347</a></span> Superconductivity in unconventional metals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.09113">https://arxiv.org/abs/2306.09113</a></span> Universal spin superconducting diode effect from spin-orbit coupling</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.08035">https://arxiv.org/abs/2306.08035</a></span> The quantum geometric origin of capacitance in insulators</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.07125">https://arxiv.org/abs/2301.07125</a></span> Incoherent transport in a model for the strange metal phase: Memory-matrix formalism</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.01382">https://arxiv.org/abs/2210.01382</a></span> Chiral current induced by torsional Weyl anomaly</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.08097">https://arxiv.org/abs/2306.08097</a></span> Lectures on Field Theory and the Standard Model: A Symmetry-Oriented Approach *****</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
