--- a/arxiv/2023_06_arxiv.html
+++ b/arxiv/2023_06_arxiv.html
@@ -120,6 +120,39 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.07125">https://arxiv.org/abs/2301.07125</a></span> Incoherent transport in a model for the strange metal phase: Memory-matrix formalism</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.01382">https://arxiv.org/abs/2210.01382</a></span> Chiral current induced by torsional Weyl anomaly</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.08097">https://arxiv.org/abs/2306.08097</a></span> Lectures on Field Theory and the Standard Model: A Symmetry-Oriented Approach *****</p>
+<br>
+<p class="p1">20230619</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.09402">https://arxiv.org/abs/2306.09402</a></span> Numerical signatures of ultra-local criticality in a one dimensional Kondo lattice model (Ya-Hui Zhang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.09405">https://arxiv.org/abs/2306.09405</a></span> Wegner’s Ising gauge spins versus Kitaev’s Majorana partons: Mapping and application to anisotropic confinement in spin-orbital liquids</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.10557">https://arxiv.org/abs/2209.10557</a></span> Symmetry indicators in commensurate magnetic flux (Jennifer Cano)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.09885">https://arxiv.org/abs/2306.09885</a></span> An ontological description for relativistic, massive bosons. (Gerard ’t Hooft)</p>
+<p class="p2"><br></p>
+<p class="p1">20230621</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.11054">https://arxiv.org/abs/2306.11054</a></span> Machine Learning Renormalization Group for Statistical Physics **** (Wanda Hou, Yi-Zhuang You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.10583">https://arxiv.org/abs/2306.10583</a></span> Hierarchical entanglement shells of multichannel Kondo clouds (Jeongmin Shim, Donghoon Kim, and H.-S. Sim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.11674">https://arxiv.org/abs/2306.11674</a></span> Probing the order parameter symmetry of two-dimensional superconductors by twisted Josephson interferometry (Erez Berg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.11160">https://arxiv.org/abs/2306.11160</a></span> Frame potential of Brownian SYK model of Majorana and Dirac fermions ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.10791">https://arxiv.org/abs/2306.10791</a></span> Active Ising Models of Flocking: A Field-Theoretic Approach</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.11218">https://arxiv.org/abs/2306.11218</a></span> Kramers’ degenerate magnetism and superconductivity (Daniel F. Agterberg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.11200">https://arxiv.org/abs/2306.11200</a></span> Nematic Bogoliubov Fermi surfaces from magnetic toroidal order in FeSe1−xSx (Daniel F. Agterberg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.10105">https://arxiv.org/abs/2306.10105</a></span> A no-go result for implementing chiral symmetries by locality-preserving unitaries in a 3-dimensional Hamiltonian lattice model of fermions *** (Lukasz Fidkowski, Cenke Xu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.11005">https://arxiv.org/abs/2306.11005</a></span> Superconductivity near spin and valley orders in graphene multilayers: a systematic study ***** (Leonid Levitov, Andrey V. Chubukov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.10141">https://arxiv.org/abs/2306.10141</a></span> Modave Lecture Notes on de Sitter Space &amp; Holography</p>
+<p class="p2"><br></p>
+<p class="p1">20230622</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.11792">https://arxiv.org/abs/2306.11792</a></span> Complete Hilbert-Space Ergodicity in Quantum Dynamics of Generalized Fibonacci Drives *** (Soonwon Choi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.12032">https://arxiv.org/abs/2306.12032</a></span> Quantum spin liquids on the diamond lattice</p>
+<p class="p2"><br></p>
+<p class="p1">20230623</p>
+<p class="p3"><a href="https://arxiv.org/abs/2306.12473">https://arxiv.org/abs/2306.12473</a><span class="s2"> Hunting for Majoranas ***</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.12875">https://arxiv.org/abs/2306.12875</a></span> Normal and superconducting currents through the Sachdev-Ye-Kitaev model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.12571">https://arxiv.org/abs/2306.12571</a></span> Entanglement Transition and Replica Wormhole in the Dissipative Sachdev-Ye-Kitaev Model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.12638">https://arxiv.org/abs/2306.12638</a></span> Deconfined quantum critical points: a review ***** (T. Senthil)<br>
+<a href="https://arxiv.org/abs/2306.12447"><span class="s1">https://arxiv.org/abs/2306.12447</span></a> Thermodynamics of Information ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.12496">https://arxiv.org/abs/2306.12496</a></span> Strange metal behavior from incoherent carriers scattered by local moments</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.13051">https://arxiv.org/abs/2306.13051</a></span> Spin fractionalization in a Kondo-lattice superconductor heterostructure (Yashar Komijani)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.12252">https://arxiv.org/abs/2303.12252</a></span> Geometric Aspects of Nonlinear and Nonequilibrium Phenomena (Naoto Nagaosa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.01944">https://arxiv.org/abs/2302.01944</a></span> Spin supplementary condition in quantum field theory: covariant SSC and physical state projection (Jung-Wook Kim)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
