--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	<div class="cvitemize"> <a href="#publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Recent News</a> </div>
 	<ul><!--<li>Now I am looking for next position starting in (maybe) September 2023. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.</li>
 	-->
-		<li><b>[Jul. 2023]</b> I will give a poster presentation <a href="https://www.sces2023.org/" style="font-style: italic;">"Theory of a quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a>, at <span style="font-style: italic;">SCES 2023, Songdo, South Korea</span>.
+		<li><b>[Sep. 2023]</b> I will join <a href="https://www.sfu.ca/physics/people/faculty/iherbut.html" style="font-style: italic;">Professor Igor Herbut's group</a>, at <span style="font-style: italic;">Simon Fraser University, Burnaby, Canada</span>.
 			</li>
-		<li><b>[Jun. 2023]</b> I will give a talk <a href="https://pcs.ibs.re.kr/PCS_Workshops/PCS_ASG_EDQM_Program_2023.html" style="font-style: italic;">"Theory of a quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a>, at <span style="font-style: italic;">ASG Mini-workshop, Daejeon, South Korea</span>.
+		<li><b>[Jul. 2023]</b> I will give a poster presentation <a href="https://www.sces2023.org/" style="font-style: italic;">"Theory of a quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a>, at <span style="font-style: italic;"><a href="https://www.sces2023.org/">International Conference on Strongly Correlated Electron Systems 2023 (SCES 2023)</a>, Songdo, South Korea</span>.
+			</li>
+		<li><b>[Jun. 2023]</b> I have given a talk <a href="https://pcs.ibs.re.kr/PCS_Workshops/PCS_ASG_EDQM_Program_2023.html" style="font-style: italic;">"Theory of a quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a>, at <span style="font-style: italic;">ASG Mini-workshop, Daejeon, South Korea</span>.
 			</li>
 		<li><b>[May 2023]</b> I have given a talk <a href="https://www.sfu.ca/physics/news-events/events/2023/may/event6.html" style="font-style: italic;">"Theory of a quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a>, at <span style="font-style: italic;">Condensed Matter Seminar, Simon Fraser University, Burnaby, British Columbia, Canada</span>.
 			</li>
@@ -444,6 +446,26 @@ Theoretical Physics, Condensed matter physics, Strongly correlated systems, Quan
 	</li></ul>
 	<div class="cvitemize"> <a id="contributed" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Contributed Talks and Posters</a> </div>
 		<ul><li><div><div style="display: flex;">
+		<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
+  <div class="sign3" style="display: inline-block;">W</div>
+  <div class="sign1" style="display: inline-block;float: left;">N</div>
+  <div class="sign2" style="display: inline-block;float: left;">E</div>
+  <div class="shadow"></div></div> International Conference on Strongly Correlated Electron Systems 2023 (SCES 2023) (Poster) </span></div>
+		<span class="cvperiod">March 2023</span>
+		</div>
+		<div class="cvitemcontent"> <a href="https://www.sces2023.org/">"Theory of a quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a> </div>	
+
+		</li><li><div><div style="display: flex;">
+		<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
+  <div class="sign3" style="display: inline-block;">W</div>
+  <div class="sign1" style="display: inline-block;float: left;">N</div>
+  <div class="sign2" style="display: inline-block;float: left;">E</div>
+  <div class="shadow"></div></div> ASG Mini-workshop (Talk) </span></div>
+		<span class="cvperiod">March 2023</span>
+		</div>
+		<div class="cvitemcontent"> <a href="https://pcs.ibs.re.kr/PCS_Workshops/PCS_ASG_EDQM_Program_2023.html">"Theory of a quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a> </div>	
+
+		</li><li><div><div style="display: flex;">
 		<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
   <div class="sign3" style="display: inline-block;">W</div>
   <div class="sign1" style="display: inline-block;float: left;">N</div>
